# ccperm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  tui.rs
src/config/: mod.rs  permission.rs  settings.rs
src/event/: handler.rs  mod.rs
src/ui/: editor.rs  help.rs  highlight.rs  layout.rs  mod.rs  picker.rs  tree.rs
