[package]
name = "ccperm"
version = "0.2.0"
edition = "2021"
authors = ["Naoki Takahashi"]
description = "A TUI viewer/editor for Claude Code permission settings"
license = "MIT"
repository = "https://github.com/nyanko3141592/ccperm"
readme = "README.md"
keywords = ["claude", "claude-code", "tui", "permissions", "config"]
categories = ["command-line-utilities", "config"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tui-tree-widget = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
thiserror = "2.0"
tui-textarea = "0.7.0"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
